# backuper

./: .gitignore  README.md  get_config.py  main.py  pyproject.toml
configs/: config.ini
