[tool.poetry]
name = "backuper"
version = "0.1.0"
description = ""
authors = ["DMITRII <dengivseti@list.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.3"
python-dotenv = "^0.19.0"
pyzipper = "^0.3.5"
cryptography = "^3.4.7"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
